add instructions to debug geoserver with geonetwork enabled